cmake_minimum_required(VERSION 3.24)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(Stacks Stacks/stacks.c Stacks/stacks.c)
add_executable(LinearQ Queues/LinearQ.c)
add_executable(CircularQueue Queues/CircularQueue.c)
add_executable(SingleLinkedList LinkedLists/SingleLinkedList.c)
add_executable(ArmstrongNumber JournalQuestions/armstrongNumber.c)
add_executable(Calculator JournalQuestions/calculator.c)
add_executable(CountDigits JournalQuestions/countDigits.c)
add_executable(FindInArray JournalQuestions/findInArray-fibonacci.c)
add_executable(MarksCalc JournalQuestions/marks.c)
add_executable(Matrices JournalQuestions/matrices.c)
add_executable(MultipleMaths JournalQuestions/multipleMaths.c)
add_executable(PascalTriangle JournalQuestions/pascalTriangle.c)
add_executable(PatternMatching JournalQuestions/patternmatching.c)
add_executable(QuadraticSolver JournalQuestions/quadratic_solver.c)
add_executable(SalaryCalc JournalQuestions/salary.c)
add_executable(StringPalindrome JournalQuestions/string_palindrome.c)
add_executable(Structs JournalQuestions/structs.c)
add_executable(DoublyLinkedList LinkedLists/DoublyLinkedList.c)
add_executable(CircularSingly LinkedLists/Circular_SinglyLinkedList.c)
add_executable(ParenthesisChecker Stacks/ParenthesisChecker.c)
add_executable(BinarySearchTree BinarySearchTree/Main.c)
add_executable(BinarySearch BinarySearch/BinarySearch.c)
add_executable(Hashing Hashing/LinearProbing/hashing.c)
add_executable(QuadraticProbing Hashing/QuadraticProbing/QuadraticProbing.c)
add_executable(Graphs Graphs/graphs.c)
add_executable(Singly LinkedLists/singly_prac.c)
add_executable(Series JournalQuestions/series.c)
add_executable(TowerOfHanoi TowerOfHanoi/ToH.c)
add_executable(AssQ1 ObjectOrientedProgramming-Assignment1/ReadnDisplayDatatypes.c)
add_executable(InsertionSort DAA/InsertionSort.c)